2011-02-19  Robert Larice
 * src/frontend/numparam/xpressn.c :
    numparm, cleanup, {}

2011-02-19  Robert Larice
 * src/frontend/numparam/mystring.c ,
 * src/frontend/numparam/xpressn.c :
    numparm, rewrite some conditional expressions

2011-02-19  Robert Larice
 * src/frontend/numparam/mystring.c :
    silence compiler warnings

2011-02-19  Robert Larice
 * src/frontend/numparam/mystring.c ,
 * src/frontend/numparam/xpressn.c :
    numparm, un-pascal-ify, use '\0'

2011-02-19  Robert Larice
 * src/frontend/numparam/mystring.c ,
 * src/frontend/numparam/nupatest.c :
    numparm, un-pascal-ify, use '\r' '\n' '\t'

2011-02-19  Robert Larice
 * src/frontend/numparam/general.h ,
 * src/frontend/numparam/mystring.c :
    numparm, cleanup some small functions

2011-02-19  Robert Larice
 * src/frontend/numparam/spicenum.c ,
 * src/frontend/numparam/xpressn.c :
    numparm, 17 digit placeholders --> numparm__XXXXXXXX dummy symbols

2011-02-19  Robert Larice
 * src/frontend/numparam/xpressn.c :
    numparm, upgrade message() to accept format strings

2011-02-19  Robert Larice
 * src/frontend/numparam/xpressn.c :
    numparm, shrink scope for dstrings, mostly message() related

2011-02-19  Robert Larice
 * src/frontend/numparam/xpressn.c :
    numparm, cleanup parseunit() and fetchnumber()

2011-02-15  Holger Vogt
 * spicelib/parser/inpfindl.c:41 with MINGW level=4.00000e000
   returned 3 instead of 4 at INPevaluate() line 210

2011-02-13  Robert Larice
 * src/frontend/numparam/spicenum.c ,
 * src/frontend/numparam/xpressn.c :
    reinstate a missing if(numerical), which got lost
      and fix a few comments

2011-02-13  Robert Larice
  part 2, the actual change

2011-02-13  Robert Larice
  part 1, whitespace and indentation, nothing else

2011-02-13  Robert Larice
  undo the last commit, with the sole purpose to seperate it into two commits

2011-02-13  Holger Vogt
 * spicelib/analysis/acan.c: explicit type cast